include book information when navigating to other fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">EbookReader</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">BooksView</string>
-    <string name="second_fragment_label">ReadBook</string>
+    <string name="first_fragment_label">EbooksView</string>
+    <string name="second_fragment_label">ReadEbook</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
