--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="lorem_ipsum">
         placeholder
     </string>
+    <string name="title_placeholder">EBOOK TITLE</string>
 </resources>
