Add sync button to menu dropdown

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
         placeholder
     </string>
     <string name="title_placeholder">EBOOK TITLE</string>
+    <string name="sync">Sync</string>
 </resources>
